fix: adding coverage in unit test